# kittybot

./: CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  REVIEWING.md  TESTING.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  codex-task--paste-directly-.md  feature---task.md  pr-template.md
.github/workflows/: ci.yml
docs/: ADR-template.md  README.md  prompt-wrapper.md
firmware/: README.md
hardware/: README.md
head/: README.md  __init__.py
head/app/: README.md  __init__.py  logging_config.py  main.py
head/tests/: README.md  test_health.py
sims/: README.md
tools/: README.md
